finished setting up basic layout for css

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,27 +1,28 @@
-.timer{
-    text-align: center;
-    color: rgb(0, 0, 0);
+span{
+    color: rgb(224, 26, 231);
+    font-size: 25px;
+    
 }
 .seconds{
     color: darkred;
 }
-.startQ{
+.quiz{
     text-align: center;
 }
 button{
-   color: rgb(38, 128, 16);
+   color: rgb(158, 45, 1);
    text-decoration:solid underline rgb(160, 6, 6) ;
    padding: 15px;
    border: 10px rgb(0, 0, 0) double;
-   
 } 
 
 h1{
     text-align: center;
-    color: rgb(78, 20, 220);
+    color: rgb(0, 0, 0);
 }
-h2{
-    color: rgb(15, 183, 189);
+p{
+    color: rgb(0, 0, 0);
+    font-size: 25px;
 }
 
 h3{
@@ -29,9 +30,6 @@ h3{
 }
 
 h4{
+    color: rgb(0, 0, 0);
     text-align: center;
-}
-p{
-    color: green;
-    font-size: 40px;
 }
